<resources>
    <string name="app_name">Pi Video</string>
    <string name="home">Home</string>
    <string name="play_stream_videos">Stream • Capture • Play</string>
    <string name="app_by_hajj">App by Hajj</string>
    <string name="linkedin">LinkedIn</string>
    <string name="github">Github</string>
    <string name="app_logo">App logo</string>
    <string name="header">Pi Video</string>
    <string name="play_video_page">Play Video Page</string>
    <string name="stream_page">Stream Page</string>
    <string name="back">back</string>
    <string name="back2">Back</string>
    <string name="stream_from_internet">Stream from Internet</string>
    <string name="play_local_video">Stream from Local</string>
    <string name="play_from_pi_recordings">Stream from Pi (Recordings)</string>
    <string name="live_feed_from_pi">Stream Live feed from Pi</string>
    <string name="goes_back_to_home">Goes back to home</string>
    <string name="exo_player_here">Exo Player here</string>
    <string name="capture_video">Capture Video (Webcam)</string>
    <string name="video_1">Video 1</string>
    <string name="video_2">Video 2</string>
    <string name="stream_video_from_internet">Stream Video from Internet</string>
    <string name="click_button_to_play_video">Click button to play video</string>
    <string name="video_3">Video 3</string>
    <string name="video_4">Video 4</string>
    <string name="video_5">Video 5</string>
    <string name="stream_from_local_phone_storage">Stream from Local (Phone Storage)</string>
    <string name="capture_video_using_usb_webcam">Capture Video Using USB Webcam</string>
    <string name="capture_explain">Click button to start recording video.\n\t\t\t\tVideo will be saved on Pi.</string>
    <string name="record_video">Start Recording Video</string>
    <string name="stream_recorded_video_from_pi">Stream Recorded Video from Pi</string>
    <string name="stream_live_feed_from_pi">Stream Live Feed from Pi</string>
    <string name="click_to_start_streaming_from_pi">Click button to start streaming from Pi</string>
    <string name="start_live_streaming">Start Live Stream</string>
    <string name="stop_live_stream">Stop Live Stream</string>
    <string name="view_live_stream">View Live Stream</string>
    <string name="stop_recording_video">Stop Recording Video</string>
</resources>